--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-jss": "^3.0.1",
     "react-komposer": "^1.3.0",
     "react-mounter": "^1.0.0",
-    "react-simple-di": "^1.0.1"
+    "react-simple-di": "^1.0.1",
+    "shingon-load-jss": "^1.0.3"
   },
   "devDependencies": {
     "@kadira/storybook": "^1.x.x",
