--- a/package.json
+++ b/package.json
@@ -25,10 +25,6 @@
   },
   "devDependencies": {
     "@kadira/storybook": "^1.x.x",
-    "enzyme": "^2.2.0",
-    "jsdom": "^8.0.4",
-    "eslint": "2.7.x",
-    "eslint-plugin-react": "4.3.x",
     "babel-core": "6.x.x",
     "babel-plugin-react-require": "2.x.x",
     "babel-polyfill": "6.x.x",
@@ -36,9 +32,13 @@
     "babel-preset-react": "6.x.x",
     "babel-preset-stage-2": "6.x.x",
     "babel-root-slash-import": "1.x.x",
-    "sinon": "1.17.x",
     "chai": "3.x.x",
+    "enzyme": "^2.2.0",
+    "eslint": "2.7.x",
+    "eslint-plugin-react": "4.3.x",
+    "jsdom": "^8.0.4",
     "mocha": "2.x.x",
-    "react-addons-test-utils": "^15.0.0"
+    "react-addons-test-utils": "^15.0.0",
+    "sinon": "1.17.x"
   }
 }
