--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "shingon-simple-todos",
   "scripts": {
     "test": "mocha .scripts/mocha_boot.js client/**/tests/**/*.js --compilers js:babel-core/register",
-    "storybook": "start-storybook -p 9001"
+    "storybook": "start-storybook -p 9001",
+    "gagarin": "gagarin server/methods/tests/ || true"
   },
   "repository": {
     "type": "git",
@@ -37,6 +38,7 @@
     "enzyme": "^2.2.0",
     "eslint": "2.7.x",
     "eslint-plugin-react": "4.3.x",
+    "gagarin": "^0.4.12",
     "jsdom": "^8.0.4",
     "mocha": "2.x.x",
     "react-addons-test-utils": "^15.0.0",
