Change gagarin script to run in verbose mode, per its readme

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "mocha .scripts/mocha_boot.js client/**/tests/**/*.js --compilers js:babel-core/register",
     "storybook": "start-storybook -p 9001",
-    "gagarin": "gagarin server/methods/tests/ || true"
+    "gagarin": "gagarin server/methods/tests/ -v || true"
   },
   "repository": {
     "type": "git",
