--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.2.5",
+    "jss": "^5.5.5",
+    "jss-preset-default": "^0.4.0",
     "mantra-core": "^1.2.0",
     "object-merge": "^2.5.1",
     "react": "^15.0.0",
@@ -21,8 +23,7 @@
     "react-helmet": "^3.1.0",
     "react-komposer": "^1.3.0",
     "react-mounter": "^1.0.0",
-    "react-simple-di": "^1.0.1",
-    "shingon-load-jss": "^1.0.3"
+    "react-simple-di": "^1.0.1"
   },
   "devDependencies": {
     "@kadira/storybook": "^1.x.x",
