--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-simple-di": "^1.0.1"
   },
   "devDependencies": {
-    "@kadira/storybook": "^1.x.x",
+    "@kadira/storybook": "^2.6.1",
     "babel-core": "6.x.x",
     "babel-plugin-react-require": "2.x.x",
     "babel-polyfill": "6.x.x",
