--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "shingon-simple-todos",
   "scripts": {
     "test": "mocha .scripts/mocha_boot.js client/**/tests/**/*.js --compilers js:babel-core/register",
-    "storybook": "start-storybook -p 9001"
+    "storybook": "start-storybook -p 9001",
+    "test-storybook": "storyshots"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@kadira/storybook": "^2.6.1",
+    "@kadira/storyshots": "^1.1.3",
     "babel-core": "6.x.x",
     "babel-plugin-react-require": "2.x.x",
     "babel-polyfill": "6.x.x",
