--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.2.5",
-    "jss": "^5.5.5",
-    "jss-preset-default": "^0.4.0",
     "mantra-core": "^1.2.0",
     "object-merge": "^2.5.1",
     "react": "^15.0.0",
@@ -24,7 +22,8 @@
     "react-helmet": "^3.1.0",
     "react-komposer": "^1.3.0",
     "react-mounter": "^1.0.0",
-    "react-simple-di": "^1.0.1"
+    "react-simple-di": "^1.0.1",
+    "shingon-load-jss": "^2.0.0"
   },
   "devDependencies": {
     "@kadira/storybook": "^2.6.1",
