--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "mantra-core": "^1.2.0",
+    "normalize.jss": "^1.0.0",
     "object-merge": "^2.5.1",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
