--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@kadira/storybook": "^2.6.1",
+    "@kadira/storybook-addon-knobs": "^1.3.3",
     "@kadira/storyshots": "^1.1.3",
     "babel-core": "6.x.x",
     "babel-plugin-react-require": "2.x.x",
