--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mantra-core": "^1.2.0",
     "normalize.jss": "^1.0.0",
     "object-merge": "^2.5.1",
+    "partial-application": "0.0.17",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-helmet": "^3.1.0",
